# anchor-gen

examples/merkle-distributor/: Cargo.toml
examples/merkle-distributor/src/: lib.rs
